[package]
name = "Sonetto-sniffery"
version = "0.1.0"
edition = "2024"

[dependencies]
libloading = "0.7"
ilhook = "2"
once_cell = "1.17"
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_SystemServices", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "implement", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_Globalization", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }
libc = "0.2"
chrono = "0.4"
num_enum = "0.5"
byteorder = "1.5.0"
prost = "0.14"
prost-types = "0.14"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
base64 = "0.21"
[lib]
crate-type = ["cdylib"]
